--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Lab E-commerce</title>
+    <title>Free Rocket</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
